<resources>
    <string name="app_name">mqttMessenger</string>
    <string name="create">Create</string>
    <string name="send">Send</string>
    <string name="button">Button</string>
    <string name="temperature_sensor">"Temperature
    Sensor"</string>
    <string name="potentiometer">Potentiometer</string>


    <!--fragment_type_button -->
    <string name="question">Do you want an on-off button, or do you want a push-button?</string>
    <string name="explanation">"-Button on off sends command to connect something and sends command to disconnect something.

-Push button always sends the same command."</string>
    <string name="on_off">on-off</string>
    <string name="push_button">push-button</string>

    <!--fragment_on_off_config -->

    <string name="broker">Broker</string>
    <string name="broker_example">EXAMPLE: broker bla bla bla</string>

    <string name="topic">Topic</string>
    <string name="topic_example">EXAMPLE: my_room</string>

    <string name="on_command">On command</string>
    <string name="on_example">EXAMPLE: {\'room':'on\'}</string>

    <string name="off_command">Off command</string>
    <string name="off_example">EXAMPLE: {\'room':'off\'}</string>

    <string name="create_feedback">I receive feedback</string>

    <string name="create_button">Create Button</string>

    <!--fragment_feedback -->

    <string name="feedback">Feedback</string>
    <string name="feedback_">just if you receive some feedback from the system</string>

    <string name="same_topic">Same Topic</string>

    <string name="different_topic">Different Topic</string>

    <string name="topic1">Topic 1</string>

    <string name="message1">Message 1</string>

    <string name="topic2">Topic 2</string>

    <string name="message2">Message 2</string>

    <string name="feedback_example">EXAMPLE: {\'room':'1\'}</string>

    <!--fragment_push_config -->

    <string name="command">Command</string>

    <!--fragment_sensor_config -->

    <string name="create_sensor">Create Sensor</string>

    <string name="scale">Scale</string>

    <string name="scale_example">EXAMPLE: ºC or F or K</string>

    <!--fragment_potentiometer_config -->

    <string name="from">From</string>

    <string name="to">To</string>

    <string name="create_potentiometer">Create Potentiometer</string>

</resources>
