<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <Button
        android:id="@+id/button5"
        android:layout_width="234dp"
        android:layout_height="54dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="84dp"
        android:background="@color/grey"
        android:text="@string/create_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        android:text="@string/broker_example"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:layout_editor_absoluteX="66dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/topic"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:layout_editor_absoluteX="66dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/broker"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="66dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="201dp"
        android:layout_height="32dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:background="@color/grey"
        android:text="@string/create_feedback"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/off_command"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:layout_editor_absoluteX="66dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="233dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        android:text="@string/on_example"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="66dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/on_command"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_editor_absoluteX="66dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="233dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        android:text="@string/off_example"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.01"
        tools:layout_editor_absoluteX="66dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        android:text="@string/topic_example"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:layout_editor_absoluteX="65dp" />

</android.support.constraint.ConstraintLayout>