<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:text="@string/topic2"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="209dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="233dp"
        android:layout_height="20dp"
        android:layout_marginTop="120dp"
        android:background="@color/grey"
        android:text="@string/topic_example"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        tools:layout_editor_absoluteX="64dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="233dp"
        android:layout_height="20dp"
        android:layout_marginTop="136dp"
        android:background="@color/grey"
        android:text="@string/feedback_example"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:layout_editor_absoluteX="64dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:text="@string/topic1"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="105dp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="233dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey"
            android:text="@string/topic_example"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            tools:layout_editor_absoluteX="66dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="234dp"
        android:layout_height="54dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="160dp"
        android:background="@color/grey"
        android:text="@string/create_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/feedback_"
        android:textColor="@color/white"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="233dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey"
            android:text="@string/feedback_example"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            tools:layout_editor_absoluteX="66dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/feedback"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        tools:layout_editor_absoluteX="64dp" />

</android.support.constraint.ConstraintLayout>